<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/DevName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name" />

    <TextView
        android:id="@+id/DevName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DevName"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/DevName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email" />

    <TextView
        android:id="@+id/DevEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DevEmail"
        android:textSize="30dp" />

</LinearLayout>